data/derived/comb/progs/unify/prog4584.ml.out
Characters 54-55:
  let f x = let xx = x*x*x in (xx, xx < 100) in wwhile (f,2);;
                                                        ^
Error: This expression has type int -> int * bool
       but an expression was expected of type 'a * bool
